Prepares Odoop project to be open-sourced